# archon

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  STRATEGY.md  components.json  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
app/: globals.css  layout.tsx  page.tsx
app/(chat)/: layout.tsx  page.tsx
app/actions/: chat.ts  settings.ts
app/login/: page.tsx
app/signup/: page.tsx
components/: chat-layout.tsx  chat-sidebar.tsx  chat.tsx  diagram-panel.tsx  login-form.tsx  services-panel.tsx  signup-form.tsx
components/ai-elements/: attachments.tsx  chain-of-thought.tsx  commit.tsx  context.tsx  inline-citation.tsx  open-in-chat.tsx  plan.tsx  prompt-input.tsx  stack-trace.tsx  terminal.tsx  voice-selector.tsx
components/ui/: dropdown-menu.tsx
data/: PATTERNS_CONTEXT.md  WELL_ARCHITECTED.md  equivalences.yaml
data/patterns/: anti-corruption-layer.md  backup-and-restore.md  carbon-aware-scheduling.md  circuit-breaker.md  container-microservices.md  data-fabric.md  data-mesh.md  database-per-service.md  edge-gateway.md  event-mesh.md  event-sourcing-cqrs.md  finops-batch-loading.md  full-mesh-direct-peering.md  global-deployment.md  hub-and-spoke.md  hybrid-multi-cloud.md  lakehouse.md  medallion-architecture.md  ml-inference-platform.md  mlops-pipeline.md  (+23 more)
lib/: auth.ts  embedding.ts
mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp/server/: __init__.py  diagrams_tools.py  models.py  scanner.py  server.py
mcp_server/: server.py
scripts/: ingest-embeddings.ts  init-db.sql
(+410 files in other folders)
